fix button alignment on masthead details page

--- a/shell/assets/styles/global/_layout.scss
+++ b/shell/assets/styles/global/_layout.scss
@@ -39,6 +39,10 @@ HEADER {
     margin-left: 8px;
     align-self: center;
     text-align: right;
+
+    &.align-start {
+      align-self: start;
+    }
   }
 
   .role-multi-action {
